// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput is required prop should add asterik to the label text 1`] = `
<div class="text-input-label">
  some label *
</div>
`;

exports[`TextInput is required prop should not add asterik to the label text 1`] = `
<div class="text-input-label">
  some label
</div>
`;

exports[`TextInput messages should show error message if both error message and hint text are provided 1`] = `
<div class="text-input-wrapper">
  <div class="text-input">
    <div class="text-input-label">
      some label
    </div> <input id="unique-id" type="text" placeholder="" class="text-input-error">
    <div>
      <div class="text-input-error-message">
        some error message
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`TextInput messages should show error message if provided 1`] = `
<div class="text-input-wrapper">
  <div class="text-input">
    <div class="text-input-label">
      some label
    </div> <input id="unique-id" type="text" placeholder="" class="text-input-error">
    <div>
      <div class="text-input-error-message">
        some error message
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`TextInput messages should show hint text if provided 1`] = `
<div class="text-input-wrapper">
  <div class="text-input">
    <div class="text-input-label">
      some label
    </div> <input id="unique-id" type="text" placeholder="" class="">
    <div>
      <div class="text-input-hint">some hint message</div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`TextInput readonly prop should set the input to readonly 1`] = `
<div class="text-input-wrapper">
  <div class="text-input">
    <div class="text-input-label">
      some label
    </div> <input id="unique-id" type="text" readonly="readonly" placeholder="" class="text-input-readonly">
    <!---->
  </div>
  <!---->
</div>
`;

exports[`TextInput with copy button prop should render copy button if set 1`] = `
<div class="text-input-wrapper">
  <div class="text-input">
    <div class="text-input-label">
      some label
    </div> <input id="unique-id" type="text" placeholder="" class="">
    <!---->
  </div> <button data-v-27e36536="" type="button" disabled="disabled" title="Copy value" class="button-vue text-input-copy-value button-vue--icon-and-text button-vue--vue-secondary"><span data-v-27e36536="" class="button-vue__wrapper"><span data-v-27e36536="" class="button-vue__icon"><div data-v-27e36536="" class="icon-clippy"></div></span> <span data-v-27e36536="" class="button-vue__text">
		Copy value
	</span></span></button>
</div>
`;
